@@ -32,6 +32,8 @@ Improvement to profiles to exclude Estimates and Targets from calculations.
 
 Colour progression indicators in MarkBook for assessment profiles of type=dif.
 
+Extra clich throughs on the enrolments table for new enrolments and
+leavers during current year.
 
 
 Version ClaSS-1.0.16 release (2012/02/26)
